src/objects/PC_Threshold_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Named_Product_Family__c</fullName>
        <label>Named Product Family</label>
        <referenceTo>Named_Product_Family__c</referenceTo>
        <relationshipName>Named_Product_Family</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PE1__c</fullName>
        <label>PE1%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PE2__c</fullName>
        <label>PE2%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PC Threshold Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Named_Product_Family__c</columns>
        <columns>Product_Line__c</columns>
        <columns>PE1__c</columns>
        <columns>PE2__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCTM-{0000}</displayFormat>
        <label>PC Threshold Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PC Threshold Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>